AvaTax4ServiceMax/src/objects/AvaTaxConfiguration__c.object
<CustomObject>
    <description>Service URL, Account/LicenseKey, Username/Password.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <inlineHelpText>Avalara Account Number</inlineHelpText>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avalara_Service_URL__c</fullName>
        <description>Service URL for WS calls to Avalara Tax Service</description>
        <inlineHelpText>Avalara Service URL</inlineHelpText>
        <label>Avalara Service URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>One and only one AvaTaxAccount Object is the Currently Active Setting.</inlineHelpText>
        <label>Currently Active Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Company Record from which to read the Origin Address and Avalara Company Code</inlineHelpText>
        <label>Default Company</label>
        <referenceTo>AvaTaxCompany__c</referenceTo>
        <relationshipLabel>AvaTaxConfiguration</relationshipLabel>
        <relationshipName>AvaTaxConfiguration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <inlineHelpText>Avalara License Key</inlineHelpText>
        <label>License Key</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>Avalara Password</inlineHelpText>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <inlineHelpText>Avalara User Name</inlineHelpText>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AvaTaxConfiguration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AvaTaxConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTaxConfiguration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>